# tiny-js

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ast.h  common.h  compiler.h  debug.h  helper.h  jit.h  object.h  parser.h  scanner.h  token.h  vm.h
include/native/: base.h  require.h
libs/: obj.js
scripts/: array.js  basic.js  class.js  demo.js  file.js  jit.js  main.js  system.js  temp.js  util.js
src/: compiler.cpp  jit.cpp  parser.cpp  scanner.cpp  vm.cpp
src/native/: base.cpp  file.cpp  require.cpp
tests/: CMakeLists.txt  jit_test.cpp  scanner_test.cpp
